--- a/style.css
+++ b/style.css
@@ -1,19 +1,75 @@
-.container {
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+html {
+    background-color: #fffee6;
 }
 
-.zone {
+header {
+    text-align: center;
+}
+
+h1, button, .container .allMatched {
+    color:#6d4534;
+    text-align: center;
+    font-family: 'Autour One', Courier, monospace;
+    text-transform: uppercase;
+}
+
+h1 {
+    font-size: 2rem;
+    
+}
+
+button {
+    background-color: #6d4534;
+    color:#fff;
+    padding:15px 30px;
+    font-size: 1rem;
+    margin-bottom: 2rem;
+    border-radius: 15px;
+}
+
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.container .cards {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 10px;
+    -webkit-box-shadow:rgba(0,0,0,0.4) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
+    -moz-box-shadow:rgba(0,0,0,0.4) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
+    -o-box-shadow:rgba(0,0,0,0.4) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
+    box-shadow:rgba(0,0,0,0.4) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
+}
+
+.container .allMatched {
+    grid-template-columns: 1fr;    
+    font-size:1rem;    
+}
+
+
+.matched {
+    display: none;
+}
+
+.card.selected {
+    opacity: 0.5;
+    border:3px dashed #6d4534
+}
+
+.card {
     cursor:pointer;
     text-align: center;
-    font-size:10em;
+    font-size:6em;
     border-radius:4px;
-    border:1px solid #bbb;
+    border:3px solid #eaeaea;
     transition: all 0.3s linear;
 }
 
-.zone:hover {
+.card:hover {
     -webkit-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
     -moz-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
     -o-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
